# tictactangle

./: .gitignore  README.md  index.html  package.json
css/: style.css
js/: main.js
js/ai/: engine.js  index.js  wasm.js
js/app/: ports.js  session.js
js/domain/: rules.js
js/ui/: view.js
rl/: Cargo.toml  README.md
rl/src/: game.rs  main.rs  mcts.rs  net.rs  rng.rs  selfplay.rs
solver/: Cargo.toml  README.md
solver/src/: canon.rs  check.rs  index.rs  main.rs  solve.rs  verify.rs
test/: ai-adapter.test.mjs  engine.test.mjs  game.test.mjs  session.test.mjs  wasm-engine.test.mjs
tools/: arena.mjs  engines.mjs  export-weights.mjs  gen-data.mjs  train.mjs
wasm/: build.sh  engine-hard.wasm  engine-impossible.wasm  engine-medium.wasm  engine.wasm
wasm/engine/: Cargo.toml
wasm/engine/src/: lib.rs  mcts_play.rs  rlnet.rs  weights.rs
wasm/engine/weights/: hard.rs  medium.rs  untrained.rs
